// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/todolist/todolist";
option java_multiple_files = true;
option java_package = "io.grpc.examples.todolist";
option java_outer_classname = "TodoListProto";

package todolist;


import "google/api/annotations.proto";

service TodoListService{
  rpc Insert(InsertRequest) returns (InsertResponse){}
  rpc GetAllTodoList(GetAllTodoListRequest) returns (GetAllTodoListResponse){}
  rpc GetTodoList(GetTodoListRequest) returns (GetTodoListResponse){}
  rpc Update(UpdateRequest) returns (UpdateResponse){}
  rpc Delete(DeleteRequest) returns (DeleteResponse){}

  rpc Echo(StringMessage) returns (StringMessage) {
    option (google.api.http) = {
      post: "/echo"
      body: "*"
    };
  }
}

message StringMessage {
   string value = 1;
 }

message Todo{
  int64  id = 1;
  string time = 2;
  string action = 3;
  string detailAction = 4;
}

message InsertRequest{
  Todo todo = 1;
}

message InsertResponse{
  int32 statusCode = 1; //statusCode == 1 -> success
  string message = 2;
}

message GetAllTodoListRequest {
}

message GetAllTodoListResponse {
    Todo todo = 1;
}

message GetTodoListRequest {
    int64 id = 1;
}

message GetTodoListResponse {
    Todo todo = 1;
}

message UpdateRequest {
    Todo newTodo = 1;
}

message UpdateResponse {
    int32 statusCode = 1; //statusCode == 1 -> success
    string message = 2;
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
    int32 statusCode = 1; //statusCode == 1 -> success
    string message = 2;
}
